Add/edit features in component one and two

--- a/shard.yml
+++ b/shard.yml
@@ -12,3 +12,6 @@ dependencies:
   one:
     github: crystal-manyrepos/one
     branch: master
+  two:
+    github: crystal-manyrepos/one
+    branch: master
