--- a/shard.dev.yml
+++ b/shard.dev.yml
@@ -1,5 +1,7 @@
 # On dev branch, use:
 # $ SHARDS_OVERRIDE=shard.dev.yml shards update
-# dependencies:
-#   one:
-#     path: src/components/one
+dependencies:
+  one:
+    path: src/components/one
+  two:
+    path: src/components/two
