Specify tag and name values

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -24,6 +24,8 @@ jobs:
       - uses: release-drafter/release-drafter@v5
         with:
           config-name: release-drafter-one.yml
+          name: one
+          tag: vone
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   release_draft_two:
@@ -32,5 +34,7 @@ jobs:
       - uses: release-drafter/release-drafter@v5
         with:
           config-name: release-drafter-two.yml
+          name: two
+          tag: vtwo
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
