--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Update Merge Commit Message
         shell: bash
         run: |
+          git config --global user.name "George Dietrich"
+          git config --global user.email "dev@dietrich.pub"
           git commit --allow-empty --amend -m "${{ github.event.pull_request.title }} (crystal-manyrepos/root#${{ github.event.pull_request.number }})"
           git push --force-with-lease
       - name: Sync Repos
